--- a/dia.wendao.com/index.html
+++ b/dia.wendao.com/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="base.css"/>
-    <script src="base.js"></script>
+    <link rel="stylesheet" type="text/css" href="joint.css"/>
+    <script src="joint.js"></script>
     <title>JointJS Test</title>
 </head>
 <body>
