--- a/dia.wendao.com/test_svg1.html
+++ b/dia.wendao.com/test_svg1.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:svg="http://www.w3.org/2000/svg">
-<head>
-    <meta charset="UTF-8">
-    <title>test_svg1</title>
-</head>
-<body>
-<svg:svg width="300" height="100" version="1.1" >
-    <svg:circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="red" />
-</svg:svg>
-</body>
-</html>
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN"
+        "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+
+<svg width="100%" height="100%" version="1.1"
+     xmlns="http://www.w3.org/2000/svg">
+
+    <g transform="translate(100,100)">
+        <text id="TextElement" x="0" y="0" style="font-family:Verdana;font-size:24"> It's SVG!
+            <animateMotion path="M 0 0 L 100 100" dur="5s" fill="freeze"/>
+        </text>
+    </g>
+
+</svg>
